--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,12 @@ dependencies:
   qr_code_scanner: ^1.0.1
   permission_handler: ^10.2.0
   isar: ^3.0.5
-  path_provider: ^2.0.11
+  path_provider: ^2.0.12
   isar_flutter_libs: ^3.0.5
+  dio: ^4.0.6
+  open_filex: ^4.3.2
+  lecle_downloads_path_provider: ^0.0.2+8
+
 
 dev_dependencies:
   flutter_test:
