--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   dio: ^4.0.6
   open_filex: ^4.3.2
   lecle_downloads_path_provider: ^0.0.2+8
+  mvc_pattern: ^8.12.0
 
 
 dev_dependencies:
